# quad_robot

./: LICENSE  README.md
quad_robot_description/: CMakeLists.txt  memo.md  package.xml
quad_robot_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch
quad_robot_description/meshes/: base_link.stl  lf_hip_link.stl  lf_lower_leg_link.stl  lf_upper_leg_link.stl  lh_hip_link.stl  lh_lower_leg_link.stl  lh_upper_leg_link.stl  rf_hip_link.stl  rf_lower_leg_link.stl  rf_upper_leg_link.stl  rh_hip_link.stl  rh_lower_leg_link.stl  rh_upper_leg_link.stl
quad_robot_description/ros2_control/: quad_robot_ros2_control.xacro  quad_robot_ros2_effort_control.xacro
quad_robot_description/urdf/: materials.xacro  properties.urdf.xacro  quad_robot.gazebo  quad_robot.trans  quad_robot.urdf  quad_robot.xacro  quad_robot_description.xacro
quad_robot_gazebo/: CMakeLists.txt  package.xml
quad_robot_gazebo/config/: quad_robot_effort_controller.yaml  quad_robot_position_controller.yaml
quad_robot_gazebo/launch/: display_gazebo.launch.py  display_ros2_control.launch.py
quad_robot_gazebo/src/: quadruped_effort.cpp  quadruped_effort_init.cpp  quadruped_torotto.cpp
quad_robot_gazebo/worlds/: basic.world
quad_robot_webots/: CMakeLists.txt  package.xml  quad_robot_driver.xml
quad_robot_webots/include/quad_robot_webots/: QuadRobotDriver.hpp
quad_robot_webots/launch/: display_webots_launch.py
quad_robot_webots/protos/: QuadRobot.proto
quad_robot_webots/resource/: quad_robot.urdf
quad_robot_webots/src/: QuadRobotDriver.cpp  joint_pub_node.cpp
quad_robot_webots/worlds/: .uw2_world.wbproj  basic_world.proto
